[iOS] Use UIModalPresentationPageSheet for ConsentBump

The ConsentBump should be displayed modally on iPhone+ landscape and
iPad.

Bug: 873128
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I96482c930ef1b6b94509e8aafd7b1691b76b2e28
Reviewed-on: https://chromium-review.googlesource.com/1170823
Reviewed-by: Jérôme Lebel <jlebel@chromium.org>
Reviewed-by: Mark Cogan <marq@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#582529}
Former-commit-id: 77121bde31ed24298991cf267bc38a8dca03b256